--- a/domPractice/productPractice.html
+++ b/domPractice/productPractice.html
@@ -30,14 +30,29 @@
     <script type="module">
         import { product } from "../domPractice/product.js";
         let search = document.querySelector(".search");
+        var num = 0;
         search.addEventListener("click", function (event) {
-
             let enterSearch = document.querySelector("#enterSearch");
+            let formTable = document.querySelector("#formTable");
+            formTable.innerHTML = "";
+            num = 0;
             product.forEach(element => {
                 if (element.ProductNumber == enterSearch.value) {
-                    alert(`這個商品為${element.ProductName}價格為${element.Price}剩餘數量為${element.Amount}類型為${element.ProductType}`);
+                    let valuesSearch = Object.values(element)
+                    let tr = document.createElement('tr');
+                    num++;
+                    valuesSearch.forEach(item=>{
+                        let td = document.createElement('td');
+                        let text = document.createTextNode(item);
+                        td.append(text);
+                        tr.append(td);
+                    })
+                    formTable.append(tr);
+                    // alert(`這個商品為${element.ProductName}價格為${element.Price}剩餘數量為${element.Amount}類型為${element.ProductType}`);
+                    
                 }
-            });
+            })
+            foolProof(num);
         })
 
         let typeFilter = document.querySelector(".typeFilter");
@@ -45,10 +60,12 @@
             let enterFilter = document.querySelector("#enterFilter");
             let formTable = document.querySelector("#formTable");
             formTable.innerHTML = "";
+            num = 0;
             product.forEach(element => {
                 if (element.ProductType == enterFilter.value) {
                     let valuesFilter = Object.values(element);
                     let tr = document.createElement('tr');
+                    num++;
                     valuesFilter.forEach(item => {
                         let td = document.createElement('td');
                         let text = document.createTextNode(item);
@@ -58,6 +75,7 @@
                     formTable.append(tr);
                 }
             })
+            foolProof(num);
         })
 
         let scopeFilter = document.querySelector(".scopeFilter");
@@ -66,10 +84,12 @@
             let enterNumScope2 = document.querySelector("#enterNumScope2");
             let formTable = document.querySelector("#formTable");
             formTable.innerHTML = "";
+            num = 0;
             product.forEach(element=>{
                 if(element.Price >= enterNumScope1.value && element.Price <= enterNumScope2.value){
                     let valuesFilter = Object.values(element);
                     let tr = document.createElement('tr');
+                    num++;
                     valuesFilter.forEach(item => {
                         let td = document.createElement('td');
                         let text = document.createTextNode(item);
@@ -79,7 +99,13 @@
                     formTable.append(tr);
                 }
             })
+            foolProof(num);
         })
+        function foolProof(numberNum){
+            if(numberNum == 0){
+                alert("查無結果!請重新輸入");
+            }
+        }
     </script>
 </body>
 
